--- a/index.html
+++ b/index.html
@@ -7,174 +7,54 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Titan+One&display=swap" rel="stylesheet">
 <style>
   * {margin:0; padding:0; box-sizing:border-box;}
-
   body {
     font-family: "Nunito", sans-serif;
-    background: 
-      linear-gradient(rgba(210, 180, 140, 0.15) 1px, transparent 1px),
-      linear-gradient(90deg, rgba(210, 180, 140, 0.15) 1px, transparent 1px),
-      linear-gradient(135deg, #FF8C00 0%, #FFA500 100%);
+    background: linear-gradient(rgba(210,180,140,0.15) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(210,180,140,0.15) 1px, transparent 1px),
+                linear-gradient(135deg, #FF8C00 0%, #FFA500 100%);
     background-size: 40px 40px;
     margin: 0;
     padding: 20px;
     min-height: 100vh;
-    position: relative;
     color: white;
   }
 
-  .header {
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:20px;
-    background:rgba(255,255,255,0.1);
-    border-radius:15px;
-    backdrop-filter:blur(10px);
-    border:2px solid rgba(255,255,255,0.2);
-    margin-bottom:30px;
-  }
-  .logo-text {
-    font-family:"Titan One",sans-serif;
-    font-size:2.5em;
-    color: white;
-    text-shadow:2px 2px 4px rgba(0,0,0,0.3);
-  }
+  .header { display:flex; justify-content:space-between; align-items:center; padding:20px; background:rgba(255,255,255,0.1); border-radius:15px; backdrop-filter:blur(10px); border:2px solid rgba(255,255,255,0.2); margin-bottom:30px; }
+  .logo-text { font-family:"Titan One",sans-serif; font-size:2.5em; color:white; text-shadow:2px 2px 4px rgba(0,0,0,0.3); }
   .nav-buttons { display:flex; gap:12px; }
-  .nav-btn {
-    background: rgba(255,255,255,0.9);
-    color: #FF8C00;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    font-weight: 600;
-    text-decoration:none;
-    transition: all 0.3s ease;
-    box-shadow:0 4px 12px rgba(0,0,0,0.2);
-  }
+  .nav-btn { background: rgba(255,255,255,0.9); color:#FF8C00; padding:10px 20px; border:none; border-radius:20px; cursor:pointer; font-weight:600; text-decoration:none; transition:all 0.3s ease; box-shadow:0 4px 12px rgba(0,0,0,0.2); }
   .nav-btn:hover { background:white; transform:translateY(-2px); box-shadow:0 6px 18px rgba(0,0,0,0.3); }
 
-  #coin-display {
-    font-weight: 700;
-    font-size: 1.2rem;
-    background: rgba(255,255,255,0.2);
-    padding: 8px 16px;
-    border-radius: 12px;
-    backdrop-filter: blur(5px);
-  }
+  #coin-display { font-weight:700; font-size:1.2rem; background:rgba(255,255,255,0.2); padding:8px 16px; border-radius:12px; backdrop-filter:blur(5px); }
 
-  .page-title {
-    font-size: 2.5rem;
-    font-weight: 700;
-    text-align: center;
-    margin: 40px 0 20px;
-    color: white;
-    font-family: "Titan One", cursive;
-    text-shadow: 4px 4px 6px rgba(0,0,0,0.2);
-  }
+  .page-title { font-size:2.5rem; font-weight:700; text-align:center; margin:40px 0 20px; color:white; font-family:"Titan One",cursive; text-shadow:4px 4px 6px rgba(0,0,0,0.2); }
+  #unlock-btn { display:block; padding:12px 24px; font-size:16px; margin:0 auto 20px auto; border:none; border-radius:12px; background:#FF8C00; color:white; cursor:pointer; box-shadow:0 5px 15px rgba(0,0,0,0.2); }
+  #unlock-btn:hover { background:#ffa733; }
 
-  #unlock-btn {
-    display: block;
-    padding: 12px 24px;
-    font-size: 16px;
-    margin: 0 auto 20px auto;
-    border: none;
-    border-radius: 12px;
-    background: #FF8C00;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-  }
-  #unlock-btn:hover { background: #ffa733; }
+  .scroll-card { background: rgba(255,255,255,0.15); border-radius:20px; padding:25px; box-shadow:0 8px 25px rgba(0,0,0,0.18); width:90%; max-width:1400px; max-height:80vh; overflow-y:auto; display:flex; flex-direction:column; margin:auto; gap:30px; }
+  .pack-name { font-family:"Titan One",cursive; font-size:1.8rem; font-weight:700; color:#ffffff; margin-bottom:6px; border-bottom:2px solid #ffffff; padding-bottom:6px; }
+  .blooks-row { display:grid; grid-template-columns:repeat(6, 1fr); gap:8px; }
+  .blook { position:relative; width:100%; aspect-ratio:1/1; border-radius:10px; display:flex; align-items:center; justify-content:center; transition: transform 0.2s; cursor:default; }
+  .blook:hover { transform:scale(1.05); }
+  .blook img.blook-image { max-width:70%; max-height:70%; object-fit:contain; }
+  .blook.locked img.blook-image { filter:grayscale(100%); opacity:0.6; }
+  .blook.locked img.locked-overlay { position:absolute; width:40px; height:40px; top:50%; left:50%; transform:translate(-50%,-50%); z-index:20; pointer-events:none; }
+  .blook-count { position:absolute; bottom:4px; left:4px; width:22px; height:22px; border-radius:50%; color:white; font-size:12px; display:flex; align-items:center; justify-content:center; font-weight:bold; z-index:20; box-shadow:0 2px 6px rgba(0,0,0,0.25); }
 
-  .scroll-card {
-    background: rgba(255,255,255,0.15);
-    border-radius: 20px;
-    padding: 25px;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.18);
-    width: 90%;
-    max-width: 1400px;
-    max-height: 80vh;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    gap: 30px;
-  }
-  .pack-name {
-    font-family: "Titan One", cursive;
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #ffffff;
-    margin-bottom: 6px;
-    border-bottom: 2px solid #ffffff;
-    padding-bottom: 6px;
-  }
-  .blooks-row { display: grid; grid-template-columns: repeat(6, 1fr); gap: 8px; }
-  .blook {
-    position: relative;
-    width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 10px;
-    display: flex;
-    align-items: center; justify-content: center;
-    transition: transform 0.2s;
-    cursor: default;
-  }
-  .blook:hover { transform: scale(1.05); }
-  .blook img.blook-image { max-width: 70%; max-height: 70%; object-fit: contain; }
-  .blook.locked img.blook-image { filter: grayscale(100%); opacity: 0.6; }
-  .blook.locked img.locked-overlay {
-    position: absolute; width: 40px; height: 40px;
-    top: 50%; left: 50%; transform: translate(-50%, -50%);
-    z-index: 20; pointer-events: none;
-  }
-  .blook-count {
-    position: absolute; bottom: 4px; left: 4px;
-    width: 22px; height: 22px; border-radius: 50%;
-    color: white; font-size: 12px; display: flex;
-    align-items: center; justify-content: center;
-    font-weight: bold; z-index: 20;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.25);
-  }
+  footer { text-align:center; padding:20px; font-size:14px; margin-top:20px; color:#fff; }
+  .scroll-card::-webkit-scrollbar { width:8px; }
+  .scroll-card::-webkit-scrollbar-thumb { background:#ffffff; border-radius:4px; }
 
-  footer { text-align: center; padding: 20px; font-size: 14px; margin-top: 20px; color: #fff; }
-
-  .scroll-card::-webkit-scrollbar { width: 8px; }
-  .scroll-card::-webkit-scrollbar-thumb { background: #ffffff; border-radius: 4px; }
-
-  #blook-modal {
-    position: fixed; inset: 0; z-index: 200;
-    display: none; justify-content: center; align-items: center;
-  }
-  .modal-overlay {
-    position: absolute; inset: 0;
-    background: rgba(0,0,0,0.6); backdrop-filter: blur(3px);
-  }
-  .modal-card {
-    position: relative; width: 360px; aspect-ratio: 1/1;
-    display: flex; flex-direction: column;
-    border-radius: 12px; overflow: hidden;
-    box-shadow: 0 18px 60px rgba(0,0,0,0.35);
-    background: #ff9d00;
-  }
-  .blook-image-section {
-    flex: 1; position: relative;
-    background-size: cover; background-position: center;
-  }
-  .blook-image-section img {
-    position: absolute; top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 50%; max-height: 50%; border-radius: 12px;
-  }
-  .blook-info-section { padding: 16px; text-align: center; }
-  .blook-info-section h2 { margin: 0; font-size: 1.8rem; color: #fff; }
-  .blook-info-section p { margin: 4px 0; font-size: 1rem; color: #333; }
+  #blook-modal { position:fixed; inset:0; z-index:200; display:none; justify-content:center; align-items:center; }
+  .modal-overlay { position:absolute; inset:0; background:rgba(0,0,0,0.6); backdrop-filter:blur(3px); }
+  .modal-card { position:relative; width:360px; aspect-ratio:1/1; display:flex; flex-direction:column; border-radius:12px; overflow:hidden; box-shadow:0 18px 60px rgba(0,0,0,0.35); background:#ff9d00; }
+  .blook-image-section { flex:1; position:relative; background-size:cover; background-position:center; }
+  .blook-image-section img { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); max-width:50%; max-height:50%; border-radius:12px; }
+  .blook-info-section { padding:16px; text-align:center; }
+  .blook-info-section h2 { margin:0; font-size:1.8rem; color:#fff; }
+  .blook-info-section p { margin:4px 0; font-size:1rem; color:#333; }
   .modal-actions { display:flex; justify-content:center; gap:12px; margin-top:10px; }
-  .sell-btn {
-    padding:8px 14px; border:none; border-radius:8px;
-    cursor:pointer; font-weight:600;
-  }
+  .sell-btn { padding:8px 14px; border:none; border-radius:8px; cursor:pointer; font-weight:600; }
   .sell-one { background:#ff0800; color:white; }
   .sell-dupes { background:#3300ff; color:white; }
 </style>
@@ -225,11 +105,9 @@
 function initUserData() {
   if (!localStorage.getItem('userData')) {
     localStorage.setItem('userData', JSON.stringify({
-      username: "SuperMemes_64",
-      coins: 0, // new users start with 0 coins
+      coins: 0,
       unlockedBlooks: [],
-      blookCounts: {},
-      totalPacksOpened: 0
+      blookCounts: {}
     }));
   }
   return JSON.parse(localStorage.getItem('userData'));
@@ -239,14 +117,13 @@ function loadUserData() {
   document.getElementById('coin-display').textContent = `💰 Coins: ${data.coins}`;
   return data;
 }
-function saveUserData(data) {
-  localStorage.setItem('userData', JSON.stringify(data));
-}
+function saveUserData(data) { localStorage.setItem('userData', JSON.stringify(data)); }
 
 // ----------------- Blooks -----------------
 const rarityColors = { Uncommon:"#32CD32", Rare:"#1E90FF", Epic:"#FF4500", Legendary:"#FFA500", Chroma:"#00FFFF", Unique:"#008080" };
 const sellValues = { Uncommon:5, Rare:20, Epic:75, Legendary:200, Chroma:1000, Unique:500 };
 
+// Replace with all packs and blooks used in your Market
 const packs = [
   {
     pack:"Breakfast Pack",
@@ -262,7 +139,7 @@ const packs = [
       {name:"Pancakes",rarity:"Rare",chance:"9%",image:"https://i.postimg.cc/cC6PPGmF/pancakes.webp"},
       {name:"French Toast",rarity:"Epic",chance:"5%",image:"https://i.postimg.cc/QCPv3YYh/frenchtoast.webp"}
     ]
-  },
+  }
 ];
 
 const collection = document.getElementById('collection');
@@ -289,11 +166,9 @@ function renderCollection() {
       const isUnlocked = unlocked.includes(blook.name);
       blookDiv.className = 'blook' + (isUnlocked ? '' : ' locked');
 
-      const countHTML = isUnlocked
-        ? `<div class="blook-count" style="background:${rarityColors[blook.rarity]}">${counts[blook.name] || 1}</div>` : '';
-
+      const countHTML = isUnlocked ? `<div class="blook-count" style="background:${rarityColors[blook.rarity]}">${counts[blook.name] || 1}</div>` : '';
       blookDiv.innerHTML = `<img src="${blook.image}" class="blook-image">
-                            ${!isUnlocked ? `<img src="https://i.postimg.cc/TYvNxYK3/LOCKED-1.png" class="locked-overlay">` : '' }
+                            ${!isUnlocked ? `<img src="https://i.postimg.cc/TYvNxYK3/LOCKED-1.png" class="locked-overlay">` : ''}
                             ${countHTML}`;
 
       blookDiv.addEventListener('click', () => {
@@ -327,7 +202,7 @@ function sellBlook() {
   if (!currentModalBlook) return;
   const data = loadUserData();
   const name = currentModalBlook.name;
-  if (data.blookCounts[name] > 0) {
+  if ((data.blookCounts[name] || 0) > 0) {
     updateCoins(sellValues[currentModalBlook.rarity] || 1);
     data.blookCounts[name]--;
     if (data.blookCounts[name] <= 0) {
@@ -355,17 +230,15 @@ function sellAllDuplicates() {
   }
 }
 
-// ----------------- Unlock All Blooks (once) -----------------
+// Unlock all blooks
 document.getElementById('unlock-btn').addEventListener('click', () => {
   const data = loadUserData();
-  packs.forEach(pack => {
-    pack.blooks.forEach(blook => {
-      if (!data.unlockedBlooks.includes(blook.name)) {
-        data.unlockedBlooks.push(blook.name);
-        data.blookCounts[blook.name] = 1; // only unlock once
-      }
-    });
-  });
+  packs.forEach(pack => pack.blooks.forEach(blook => {
+    if (!data.unlockedBlooks.includes(blook.name)) {
+      data.unlockedBlooks.push(blook.name);
+      data.blookCounts[blook.name] = 1;
+    }
+  }));
   saveUserData(data);
   renderCollection();
 });
@@ -373,7 +246,6 @@ document.getElementById('unlock-btn').addEventListener('click', () => {
 document.querySelector('.modal-overlay').addEventListener('click', ()=>{document.getElementById('blook-modal').style.display='none'});
 window.addEventListener('keydown', e=>{if(e.key==='Escape') document.getElementById('blook-modal').style.display='none'});
 
-// Init
 renderCollection();
 </script>
 </body>
