--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ function saveUserData(data) {
   localStorage.setItem('userData', JSON.stringify(data));
 }
 
-const rarityColors = { Uncommon:"#32CD32", Rare:"#1E90FF", Epic:"#FF4500", Legendary:"#FFA500", Chroma:"#00FFFF", Unique:"#008080" };
-const sellValues = { Uncommon:5, Rare:20, Epic:75, Legendary:200, Chroma:1000, Unique:500 };
+const rarityColors = { Uncommon:"limegreen", Rare:"blue", Epic:"red", Legendary:"orange", Chroma:"cyan", Unique:"#008080",Mystical:"#9C27B0" };
+const sellValues = { Uncommon:5, Rare:20, Epic:75, Legendary:200, Chroma:300, Unique:500, Mystical:1000 };
 
 const packs = [
   { pack:"Breakfast Pack", background:"https://i.postimg.cc/jdK9YNSp/download.webp",
