--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -90,7 +91,7 @@ footer { text-align:center; padding:20px; font-size:14px; margin-top:20px; color
 </div>
 
 <h1 class="page-title">Blooks</h1>
-<button id="unlock-btn">Unlock All Blooks</button>
+<div id="admin-controls"></div> <!-- dev-only button goes here -->
 <div class="scroll-card" id="collection"></div>
 
 <footer>Scratchlet © 2024 • The Ultimate Blooket Remix Experience</footer>
@@ -127,21 +128,36 @@ footer { text-align:center; padding:20px; font-size:14px; margin-top:20px; color
 
 <script>
 function initUserData() {
-  if (!localStorage.getItem('userData')) {
-    localStorage.setItem('userData', JSON.stringify({
-      username: "SuperMemes_64",
+  let data = JSON.parse(localStorage.getItem('userData'));
+  if (!data) {
+    data = {
+      username: "",
       coins: 1000,
       unlockedBlooks: [],
       blookCounts: {},
       totalPacksOpened: 0
-    }));
+    };
+    localStorage.setItem('userData', JSON.stringify(data));
   }
-  return JSON.parse(localStorage.getItem('userData'));
+  return data;
 }
 
 function loadUserData() {
   const data = initUserData();
   document.getElementById('coin-display').textContent = `💰 Coins: ${data.coins}`;
+  
+  // Only render unlock button if dev account
+  const adminControls = document.getElementById('admin-controls');
+  adminControls.innerHTML = "";
+  if (data.username === "SuperMemes_64") {
+    const btn = document.createElement("button");
+    btn.id = "unlock-btn";
+    btn.textContent = "🔓 Unlock All Blooks";
+    btn.className = "nav-btn";
+    btn.addEventListener("click", unlockAllBlooks);
+    adminControls.appendChild(btn);
+  }
+  
   return data;
 }
 
@@ -149,8 +165,8 @@ function saveUserData(data) {
   localStorage.setItem('userData', JSON.stringify(data));
 }
 
-const rarityColors = { Uncommon:"limegreen", Rare:"blue", Epic:"red", Legendary:"orange", Chroma:"cyan", Unique:"#008080",Mystical:"#9C27B0" };
-const sellValues = { Uncommon:5, Rare:20, Epic:75, Legendary:200, Chroma:300, Unique:500, Mystical:1000 };
+const rarityColors = { Uncommon:"limegreen", Rare:"blue", Epic:"red", Legendary:"orange", Chroma:"cyan", Unique:"#008080",Mystical:"#9C27B0",Whimsical:"#ff4ae5" };
+const sellValues = { Uncommon:5, Rare:20, Epic:75, Legendary:200, Chroma:300, Unique:500, Mystical:1000, Whimsical:2000 };
 
 const packs = [
   {
@@ -692,7 +708,7 @@ function renderCollection() {
   });
 }
 
-// --- Sell functions with confirmation ---
+// --- Sell functions ---
 function attemptSell() {
   if (!currentModalBlook) return;
   const data = loadUserData();
@@ -741,8 +757,7 @@ function sellAllDuplicates() {
   }
 }
 
-// --- Unlock all button ---
-document.getElementById('unlock-btn').addEventListener('click', () => {
+function unlockAllBlooks() {
   let data = loadUserData();
   packs.forEach(pack => pack.blooks.forEach(blook => {
     if (!data.unlockedBlooks.includes(blook.name)) {
@@ -752,17 +767,25 @@ document.getElementById('unlock-btn').addEventListener('click', () => {
   }));
   saveUserData(data);
   renderCollection();
-});
+}
 
 // --- Modal events ---
-document.querySelector('.modal-overlay').addEventListener('click', ()=>{document.getElementById('blook-modal').style.display='none'});
+document.querySelectorAll('#blook-modal .modal-overlay').forEach(el => {
+  el.addEventListener('click', ()=>{document.getElementById('blook-modal').style.display='none'});
+});
 window.addEventListener('keydown', e=>{if(e.key==='Escape') document.getElementById('blook-modal').style.display='none'});
 
 // --- Confirmation modal events ---
 document.getElementById('confirm-yes').addEventListener('click', sellBlook);
 document.getElementById('confirm-no').addEventListener('click', ()=>{document.getElementById('confirm-modal').style.display='none';});
 
+function logout() {
+  localStorage.removeItem('userData');
+  window.location.href = "https://scratchlet-official.github.io/";
+}
+
 renderCollection();
 </script>
 </body>
 </html>
+```
