--- a/index.html
+++ b/index.html
@@ -637,6 +637,28 @@ const packs = [
   },
 
   {
+    pack: "Video Game Pack",
+        background: "https://i.postimg.cc/N0YHGDkv/Video-Game-Background.png",
+        blooks: [
+            {name:"Sans",rarity:"Uncommon",chance:"16%",image:"https://i.postimg.cc/C1kXCFfg/Sans.png"},
+            {name:"Bacon Hair",rarity:"Uncommon",chance:"16%",image:"https://i.postimg.cc/HxXR0p7D/Bacon-Hair.png"},
+            {name:"Pokeball", rarity:"Uncommon",chance:"16%",image:"https://i.postimg.cc/s2tbZB1D/Pokeball.png"},
+            {name:"Pacman", rarity:"Uncommon",chance:"16%",image:"https://i.postimg.cc/s2tbZB1j/Pacman.png"},
+            {name:"Noob", rarity:"Rare",chance:"8%",image:"https://i.postimg.cc/hjT68S7P/Noob.png"},
+            {name:"Pong", rarity:"Rare",chance:"8%",image:"https://i.postimg.cc/1tw209Ny/Pong.png"},
+            {name:"Kirby", rarity:"Rare",chance:"8%",image:"https://i.postimg.cc/JnZv31Bw/Kirby.png"},
+            {name:"Astro Bot", rarity:"Epic",chance:"6%",image:"https://i.postimg.cc/YSJTm4jp/Astro-Bot.png"},
+            {name:"Snake", rarity:"Epic",chance:"6%",image:"https://i.postimg.cc/9fvsq406/Snake.png"},
+            {name:"Snake.io", rarity:"Epic",chance:"6%",image:"https://i.postimg.cc/rpv7tdzc/Snake-io.png"},
+            {name:"Piggy",rarity:"Legendary",chance:"1.8%",image:"https://i.postimg.cc/TPZBWy1s/Piggy.png"},
+            {name:"Golden Pacman",rarity:"Chroma",chance:"0.07%",image:"https://i.postimg.cc/1zLbNgXj/Golden-Pacman.png"},
+            {name:"Keeby",rarity:"Chroma",chance:"0.05%",image:"https://i.postimg.cc/R0j2n3q4/Keeby.png"},
+            {name:"Stud",rarity:"Chroma"",chance:"0.04%",image:"https://i.postimg.cc/GhHP6Xq2/Stud.png"},
+            {name:"Red Piggy",rarity:"Chroma",chance:"0.04%",image:"https://i.postimg.cc/tgL8V1Jm/Red-Piggy.png"}
+        ]
+     },
+
+  {
     pack: "OG Pack",
     background: "https://i.postimg.cc/KjkJ3qFc/Screenshot-18-9-2025-213351-turbowarp-org.jpg",
     blooks: [
