--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ const packs = [
             {name:"Piggy",rarity:"Legendary",chance:"1.8%",image:"https://i.postimg.cc/TPZBWy1s/Piggy.png"},
             {name:"Golden Pacman",rarity:"Chroma",chance:"0.07%",image:"https://i.postimg.cc/1zLbNgXj/Golden-Pacman.png"},
             {name:"Keeby",rarity:"Chroma",chance:"0.05%",image:"https://i.postimg.cc/R0j2n3q4/Keeby.png"},
-            {name:"Stud",rarity:"Chroma"",chance:"0.04%",image:"https://i.postimg.cc/GhHP6Xq2/Stud.png"},
+            {name:"Stud",rarity:"Chroma",chance:"0.04%",image:"https://i.postimg.cc/GhHP6Xq2/Stud.png"},
             {name:"Red Piggy",rarity:"Chroma",chance:"0.04%",image:"https://i.postimg.cc/tgL8V1Jm/Red-Piggy.png"}
         ]
      },
