--- a/index.html
+++ b/index.html
@@ -654,7 +654,8 @@ const packs = [
             {name:"Golden Pacman",rarity:"Chroma",chance:"0.07%",image:"https://i.postimg.cc/1zLbNgXj/Golden-Pacman.png"},
             {name:"Keeby",rarity:"Chroma",chance:"0.05%",image:"https://i.postimg.cc/R0j2n3q4/Keeby.png"},
             {name:"Stud",rarity:"Chroma",chance:"0.04%",image:"https://i.postimg.cc/GhHP6Xq2/Stud.png"},
-            {name:"Red Piggy",rarity:"Chroma",chance:"0.04%",image:"https://i.postimg.cc/tgL8V1Jm/Red-Piggy.png"}
+            {name:"Red Piggy",rarity:"Chroma",chance:"0.04%",image:"https://i.postimg.cc/tgL8V1Jm/Red-Piggy.png"},
+            {name:"The Souls",rarity:"Mystical",chance:"0.008%",image:"https://i.postimg.cc/YqzRh6Bx/The-Souls-Backup.gif"}
         ]
      },
 
